all targets is done

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,45 +1,61 @@
 .PHONY: all install uninstall clean dvi dist tests
 
+CXX = g++
+CXX_FLAGS = -Wall -Werror -Wextra -std=c++17 -lgtest -lgtest_main --coverage
+OS = $(shell uname -s)
+PROJECT_NAME = SmartCalc
+APP = app
+BUILD = build
+REPORT = report
+DOCUMENTATION = documentation
+DIST = dist
+
 all: install gcov_report
 
 install:
 	@echo "Installing start..."
-	@mkdir -p ../build
-	@cmake -B ../build
-	@cd ../build && make
+	@mkdir -p ../$(BUILD)
+	@cmake -B ../$(BUILD)
+	@cd ../$(BUILD) && make
 	@mkdir -p ../app
-	@-mv ../build/SmartCalc ../build/SmartCalc.app
-	@mv ../build/SmartCalc.app ../app
-	@rm -rf ../build
+ifeq ($(OS), Darwin)
+	@mv ../$(BUILD)/$(PROJECT_NAME).app ../$(APP)
+else
+	@mv ../$(BUILD)/$(PROJECT_NAME) ../$(APP)
+endif
+	@rm -rf ../$(BUILD)
 	@echo "Installing success"
 
 tests:
 	@echo "Tests start..."
-	@g++ models/*.cc tests.cc -o test -lgtest -lgtest_main --coverage
+	@$(CXX) models/*.cc tests.cc -o test $(CXX_FLAGS)
 	@./test
 	@echo "Tests done"
 
 gcov_report: tests
 	@echo "Make report..."
-	@mkdir -p ../report
+	@mkdir -p ../$(REPORT)
 	@-mv *.gc* models
-	@lcov -t ./test -o ../report/test.info --no-external -c -d models
-	@genhtml -o ../report/report_html ../report/test.info
+	@lcov -t ./test -o ../$(REPORT)/test.info --no-external -c -d models
+	@genhtml -o ../$(REPORT)/report_html ../$(REPORT)/test.info
 	@echo "Report is complete"
 
 uninstall:
 	@echo "Uninstalling start..."
-	@rm -rf ../app
+	@rm -rf ../$(APP)
 	@echo "Uninstalling success"
 
+dvi:
+	doxygen Doxyfile
+
 dist: clean
-	@mkdir -p ../dist
-	tar cvzf ../dist/source_code.tar.gz .
+	@mkdir -p ../$(DIST)
+	tar cvzf ../$(DIST)/source_code.tar.gz .
 
 style:
 	@clang-format -n -style=google $(shell find . \( -name "*.cc" -or -name "*.h" \))
 
 clean:
 	@echo "Cleaning..."
-	@rm -rf ../report *.gc* models/*.gc* test ../build ../dist logs
+	@rm -rf ../$(REPORT) *.gc* models/*.gc* test ../$(BUILD) ../$(DIST) logs ../$(DOCUMENTATION)
 	@echo "Clean is done"
