--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ REPORT = report
 DOCUMENTATION = documentation
 DIST = dist
 
-all: install gcov_report
+all: install
 
 install:
 	@echo "Installing start..."
@@ -21,8 +21,9 @@ install:
 ifeq ($(OS), Darwin)
 	@mv ../$(BUILD)/$(PROJECT_NAME).app ../$(APP)
 else
-	@mv ../$(BUILD)/$(PROJECT_NAME) ../$(APP)
+	@mv ../$(BUILD)/$(PROJECT_NAME) ../$(APP)/$(PROJECT_NAME).app
 endif
+	@-ln ../$(APP)/$(PROJECT_NAME).app ~/Desktop/
 	@rm -rf ../$(BUILD)
 	@echo "Installing success"
 
@@ -30,12 +31,12 @@ tests:
 	@echo "Tests start..."
 	@$(CXX) models/*.cc tests.cc -o test $(CXX_FLAGS)
 	@./test
+	@-mv *.gc* models
 	@echo "Tests done"
 
 gcov_report: tests
 	@echo "Make report..."
 	@mkdir -p ../$(REPORT)
-	@-mv *.gc* models
 	@lcov -t ./test -o ../$(REPORT)/test.info --no-external -c -d models
 	@genhtml -o ../$(REPORT)/report_html ../$(REPORT)/test.info
 	@echo "Report is complete"
@@ -47,15 +48,17 @@ uninstall:
 
 dvi:
 	doxygen Doxyfile
+	cp -r images ../documentation/html/
+
 
 dist: clean
 	@mkdir -p ../$(DIST)
-	tar cvzf ../$(DIST)/source_code.tar.gz .
+	tar -cvzf ../$(DIST)/source_code.tar.gz .
 
 style:
 	@clang-format -n -style=google $(shell find . \( -name "*.cc" -or -name "*.h" \))
 
 clean:
 	@echo "Cleaning..."
-	@rm -rf ../$(REPORT) *.gc* models/*.gc* test ../$(BUILD) ../$(DIST) logs ../$(DOCUMENTATION)
+	@rm -rf ../$(REPORT) models/*.gc* test ../$(BUILD)* ../$(DIST) logs ../$(DOCUMENTATION) *user
 	@echo "Clean is done"
